crates/ynz-diagnostics/tests/snapshots/snapshots__error_and_warning.snap
---
source: crates/ynz-diagnostics/tests/snapshots.rs
expression: output
---
Error: `print` was given a number, but it expects a string.
   ╭─[ test.ynz:2:2 ]
   │
 2 │     print(42)
   │  ─┬  
   │   ╰── Add quotes: print("42")
   │ 
   │ Note: Why: `print` always writes text. Numbers have to be turned into text first.
───╯
Warning: This function has no doc comment.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ────┬───  
   │     ╰───── Add `/// What this function does` above the `function` keyword.
   │ 
   │ Note: Why: Doc comments are how `ynz doc` generates documentation.
───╯

If any of these errors are confusing or unhelpful, please open an issue:
  https://github.com/patrickrizzardi/ynz/issues
