crates/ynz-diagnostics/tests/snapshots/snapshots__single_error_with_span.snap
---
source: crates/ynz-diagnostics/tests/snapshots.rs
expression: output
---
Error: `print` was given a number, but it expects a string.
   ╭─[ test.ynz:2:2 ]
   │
 2 │     print(42)
   │  ─┬  
   │   ╰── Add quotes: print("42")
   │ 
   │ Note: `print` always writes text. Numbers have to be turned into text first.
───╯

If any of these errors are confusing or unhelpful, please open an issue:
  https://github.com/yinzers/yinz-lang/issues
