crates/ynz-diagnostics/tests/snapshots/snapshots__sixty_errors_capped_at_fifty.snap
---
source: crates/ynz-diagnostics/tests/snapshots.rs
expression: output
---
Error: Error number 0.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 1.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 2.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 3.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 4.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 5.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 6.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 7.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 8.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 9.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 10.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 11.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 12.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 13.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 14.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 15.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 16.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 17.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 18.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 19.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 20.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 21.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 22.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 23.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 24.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 25.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 26.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 27.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 28.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 29.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 30.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 31.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 32.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 33.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 34.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 35.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 36.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 37.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 38.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 39.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 40.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 41.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 42.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 43.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 44.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 45.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 46.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 47.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 48.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
Error: Error number 49.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function entrypoint() -> nothing {
   │ ┬  
   │ ╰── Fix it.
   │ 
   │ Note: Because it is wrong.
───╯
... and 10 more errors hidden

If any of these errors are confusing or unhelpful, please open an issue:
  https://github.com/yinzers/yinz-lang/issues
