crates/ynz-diagnostics/tests/snapshots/snapshots__two_errors_same_file.snap
---
source: crates/ynz-diagnostics/tests/snapshots.rs
expression: output
---
Error: `function` keyword is misspelled here.
   ╭─[ test.ynz:1:1 ]
   │
 1 │ function main() -> nothing {
   │ ────┬───  
   │     ╰───── Use `function` (all lowercase).
   │ 
   │ Note: Why: Keywords in Yinz are always lowercase.
───╯
Error: `print` was given a number, but it expects a string.
   ╭─[ test.ynz:2:8 ]
   │
 2 │     print(42)
   │        ─┬  
   │         ╰── Wrap it in quotes: print("42")
   │ 
   │ Note: Why: `print` always writes text. Numbers have to be turned into text first.
───╯
